# LHD_src

./: LICENSE  README.md
completely_ramdom_stuph/: MPC_diff_drive.py  MPC_diff_drive_class.py  a-satr.py  test_client_window.py  test_trig.py
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/lhd_automation/share/lhd_automation/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/lhd_automation/share/lhd_automation/cmake/: lhd_automationConfig.cmake
install/lhd_automation/share/lhd_automation/launch/: autonomous_robot.launch.py
install/lhd_bringup/share/lhd_bringup/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/lhd_bringup/share/lhd_bringup/cmake/: lhd_bringupConfig.cmake
install/lhd_controller/share/lhd_controller/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/lhd_controller/share/lhd_controller/cmake/: lhd_controllerConfig.cmake
install/lhd_controller/share/lhd_controller/config/: joy_teleop.yaml  twist_mux_joy.yaml
install/lhd_description/share/lhd_description/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/lhd_description/share/lhd_description/meshes/: arm.STL  (+5 more)
install/lhd_localization/share/lhd_localization/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/lhd_mapping/share/lhd_mapping/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/lhd_msgs/share/lhd_msgs/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
lhd_automation/: CMakeLists.txt  package.xml
lhd_automation/launch/: autonomous_robot.launch.py
lhd_automation/lhd_automation/: MPC_diff_drive_class.py  lhd_client.py  lhd_server.py  path_planning_service.py
lhd_bringup/: CMakeLists.txt
lhd_bringup/launch/: simulated_robot.launch.py
lhd_controller/: CMakeLists.txt  package.xml
lhd_controller/config/: joy_teleop.yaml  lhd_controllers.yaml  twist_mux_topics.yaml
lhd_controller/launch/: controller.launch.py
lhd_controller/lhd_controller/: drivetrain_controller.py
lhd_controller/src/: twist_relay.cpp
lhd_description/: CMakeLists.txt
lhd_description/launch/: gazebo.launch.py
lhd_description/meshes/: brw.STL  flw.STL  frw.STL
lhd_description/rviz/: lhd.rviz  slam_setup.rviz
lhd_description/urdf/: lhd.urdf.xacro  lhd_gazebo.xacro  lhd_ros2_control.xacro  mine_gazebo.xacro
lhd_localization/: CMakeLists.txt
lhd_localization/launch/: global_localization.launch.py
lhd_localization/rviz/: amcl_particle_cloud.rviz
lhd_mapping/: CMakeLists.txt  package.xml
lhd_mapping/launch/: slam.launch.py
lhd_mapping/maps/mine/: mine_gimp.xcf
lhd_msgs/: CMakeLists.txt  package.xml
lhd_msgs/action/: NavToWaypoint.action
lhd_msgs/srv/: GetWaypoints.srv
log/: latest_build
pdf_explanation/: make_pdf.py
(+125 files in other folders)
