<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>lhd_bringup</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="bryanvas25@gmail.com">bryan</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>rplidar_ros</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <!-- <exec_depend>lhd_firmware</exec_depend> -->
  <exec_depend>lhd_controller</exec_depend>
  <exec_depend>lhd_description</exec_depend>
  <!-- <exec_depend>lhd_localization</exec_depend> -->
  <!-- <exec_depend>lhd_mapping</exec_depend> -->

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
